--- a/front-end/index.html
+++ b/front-end/index.html
@@ -74,10 +74,24 @@
 
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,600;1,600;1,700&family=Noto+Serif:ital@0;1&family=Poppins:wght@100;200;300;400;500&family=Ysabeau+Infant:wght@1;400;600&display=swap"
+            rel="stylesheet">
+
+
+
 
     </head>
 
     <body>
+        <!-- 
+        <div id="preloader">
+            <div className="row loader">
+                <div className="loader-icon" />
+            </div>
+        </div> -->
         <div id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
 
@@ -150,6 +164,9 @@
         <script src="/assets/js/scripts.js"></script>
         <script src="/assets/js/demo-settings.js"></script>
         <script src="/assets/js/charts/chart-invest.js"></script>
+
+        <script src="https://code.tidio.co/8pjb9tbo4ecsqppx2tjg8ldio0soouz9.js" async></script>
+
 
     </body>
 
