added type=module to scripts---render.com  required

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -56,8 +56,8 @@
 
         <link href="css/styles.css" rel="stylesheet" id="colors">
 
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-        <script src="sweetalert2.all.min.html"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9" type="module"></script> -->
+        <!-- <script src="sweetalert2.all.min.html" type="module"></script> -->
 
 
 
@@ -67,8 +67,9 @@
         <link rel="shortcut icon" href="/images/favicon.png">
         <link rel="stylesheet" href="/assets/css/dashlite.css">
         <link id="skin-default" rel="stylesheet" href="/assets/css/theme.css">
-        <script async src="https://www.googletagmanager.com/gtag/js"></script>
-        <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-91615293-4');</script>
+        <script async src="https://www.googletagmanager.com/gtag/js" type="module"></script>
+        <script
+            type="module">window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-91615293-4');</script>
 
 
 
@@ -96,74 +97,68 @@
         <script type="module" src="/src/main.jsx"></script>
 
 
-        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.min.js" type="module"></script>
 
-        <script src="js/popper.min.js"></script>
+        <script src="js/popper.min.js" type="module"></script>
 
-        <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js" type="module"></script>
 
-        <script src="js/nav-menu.js"></script>
+        <script src="js/nav-menu.js" type="module"></script>
 
-        <script src="search/search.js"></script>
+        <script src="search/search.js" type="module"></script>
 
-        <script src="js/easy.responsive.tabs.js"></script>
+        <script src="js/easy.responsive.tabs.js" type="module"></script>
 
-        <script src="js/owl.carousel.js"></script>
+        <script src="js/owl.carousel.js" type="module"></script>
 
-        <script src="js/jquery.counterup.min.js"></script>
+        <script src="js/jquery.counterup.min.js" type="module"></script>
 
-        <script src="js/jquery.stellar.min.js"></script>
+        <script src="js/jquery.stellar.min.js" type="module"></script>
 
-        <script src="js/waypoints.min.js"></script>
+        <script src="js/waypoints.min.js" type="module"></script>
 
-        <script src="js/countdown.js"></script>
+        <script src="js/countdown.js" type="module"></script>
 
-        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="js/jquery.magnific-popup.min.js" type="module"></script>
 
-        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="js/isotope.pkgd.min.js" type="module"></script>
 
-        <script src="js/chart.min.js"></script>
+        <script src="js/chart.min.js" type="module"></script>
 
-        <script src="js/owl.carousel.thumbs.js"></script>
+        <script src="js/owl.carousel.thumbs.js" type=" module"></script>
 
-        <script src="js/animated-headline.js"></script>
+        <script src="js/animated-headline.js" type=" module"></script>
 
-        <script src="js/clipboard.min.js"></script>
+        <script src="js/clipboard.min.js" type=" module"></script>
 
-        <script src="js/prism.js"></script>
+        <script src="js/prism.js" type="module"></script>
 
-        <script src="js/rev_slider/jquery.themepunch.tools.min.js"></script>
-        <script src="js/rev_slider/jquery.themepunch.revolution.min.js"></script>
+        <script src="js/rev_slider/jquery.themepunch.tools.min.js" type="module"></script>
+        <script src="js/rev_slider/jquery.themepunch.revolution.min.js" type="module"></script>
 
-        <script src="js/rev_slider/extensions/revolution.addon.typewriter.min.js"></script>
+        <script src="js/rev_slider/extensions/revolution.addon.typewriter.min.js" type="module"></script>
 
-        <script src="js/rev_slider/extensions/revolution.extension.actions.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.carousel.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.kenburn.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.layeranimation.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.migration.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.navigation.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.parallax.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.slideanims.min.js"></script>
-        <script src="js/rev_slider/extensions/revolution.extension.video.min.js"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.actions.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.carousel.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.kenburn.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.layeranimation.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.migration.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.navigation.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.parallax.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.slideanims.min.js" type="module"></script>
+        <script src="js/rev_slider/extensions/revolution.extension.video.min.js" type="module"></script>
 
-        <script src="js/main.js"></script>
+        <script src="js/main.js" type="module"></script>
 
-        <script src="quform/js/plugins.js"></script>
+        <script src="quform/js/plugins.js" type="module"></script>
 
-        <script src="quform/js/scripts.js"></script>
-
-
+        <script src="quform/js/scripts.js" type="module"></script>
 
 
-
-
-
-
-        <script src="/assets/js/bundle.js"></script>
-        <script src="/assets/js/scripts.js"></script>
-        <script src="/assets/js/demo-settings.js"></script>
-        <script src="/assets/js/charts/chart-invest.js"></script>
+        <script src="/assets/js/bundle.js" type="module"></script>
+        <script src="/assets/js/scripts.js" type=" module"></script>
+        <script src="/assets/js/demo-settings.js" type="module"></script>
+        <script src="/assets/js/charts/chart-invest.js" type="module"></script>
 
         <script src="https://code.tidio.co/8pjb9tbo4ecsqppx2tjg8ldio0soouz9.js" async></script>
 
