--- a/front-end/index.html
+++ b/front-end/index.html
@@ -124,11 +124,11 @@
 
         <script src="js/chart.min.js"></script>
 
-        <script src="js/owl.carousel.thumbs.js" type=" module"></script>
+        <script src="js/owl.carousel.thumbs.js"></script>
 
-        <script src="js/animated-headline.js" type=" module"></script>
+        <script src="js/animated-headline.js"></script>
 
-        <script src="js/clipboard.min.js" type=" module"></script>
+        <script src="js/clipboard.min.js"></script>
 
         <script src="js/prism.js"></script>
 
